--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             },
             initData:function(isRefresh,lang){
                 var self=this;
-
+		debugger;
                 $.ajaxSetup({
                         async:self.get('ajaxMode'),
                         dataType:'json',
