internal cache switched off

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 "lang":defLanguage,
                 "searchType":"quick",
                 "hotelsCount":10,
-                "use_jStoreCache":true,
+                "use_jStoreCache":false,
                 "statistics":new Statistics(),
                 "topDestinations":new TopDestinations(),
                 "srchLocations":new SearchLocations(),
